@@ -355,7 +355,7 @@ reference to the \hyperref[doctitle]{doctitle} and the \hyperref[subtitle]{subti
 
 The default role for interpreted text is \DUroletitlereference{Title Reference}.  Here are
 some explicit interpreted text roles: a PEP reference (\href{http://www.python.org/dev/peps/pep-0287}{PEP 287}); an
-RFC reference (\href{http://www.faqs.org/rfcs/rfc2822.html}{RFC 2822}); an abbreviation (\DUrole{abbreviation}{abb.}), an acronym
+RFC reference (\href{http://tools.ietf.org/html/rfc2822.html}{RFC 2822}); an abbreviation (\DUrole{abbreviation}{abb.}), an acronym
 (\DUrole{acronym}{reST}), code (\texttt{\DUrole{code}{print \textquotedbl{}hello world\textquotedbl{}}}); a \textsubscript{subscript};
 a \textsuperscript{superscript} and explicit roles for \DUroletitlereference{Docutils}’
 \emph{standard} \textbf{inline} \texttt{markup}.
